--- a/src/index.css
+++ b/src/index.css
@@ -55,14 +55,14 @@ button {
   cursor: pointer;
   transition: background-color 0.3s ease;
   color: white;
-  background-color: black;
+  background-color: #89CFF0;
   border-radius: 10px;
 
 }
 
 button:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: #F4C2C2;
+  color: white;
 }
 
 .question-image{
